--- a/motion-implementation/package.json
+++ b/motion-implementation/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "framer-motion": "^6.5.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
